# telemetry-quality-lab

./: .gitignore  README.md  RIGHTS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: benchmark.yaml  default.yaml
docs/: methodology.md
examples/: sample_config.yaml
src/tqlab/: __init__.py  __main__.py  benchmarking.py  cli.py  config.py  detectors.py  evaluation.py  forecasting.py  models.py  pipeline.py  reporting.py  synthetic.py
tests/: test_cli.py  test_detectors.py  test_evaluation_reporting.py  test_forecasting.py  test_pipeline.py  test_synthetic.py
