[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "telemetry-quality-lab"
version = "1.0.0"
description = "Reproducible synthetic telemetry quality detection and benchmarking"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Safouh Al Ajlani" }]
dependencies = [
  "jinja2>=3.1,<4",
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<2.5",
  "pandas>=2.1,<3",
  "pyyaml>=6,<7",
  "rich>=13,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[project.scripts]
tqlab = "tqlab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tqlab"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["tqlab"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]
sed: --: No such file or directory
